--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --watch"
+    "webpack": "webpack --watch",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
@@ -40,5 +41,9 @@
   "homepage": "https://github.com/marklee9/LetterNote#readme",
   "devDependencies": {
     "webpack-cli": "^3.1.0"
+  },
+  "engines": {
+    "node": "8.9.0",
+    "npm": "6.3.0"
   }
 }
