--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "LetterNote",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
