--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "babel-preset-react": "^6.24.1",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
+    "react-confirm": "^0.1.17",
     "react-dom": "^16.4.2",
+    "react-quill": "^1.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
