--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.4.2",
     "react-confirm": "^0.1.17",
     "react-dom": "^16.4.2",
+    "react-html-parser": "^2.0.2",
     "react-quill": "^1.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
