--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "lodash": "^4.17.10",
+    "promise": "^8.0.2",
     "react": "^16.4.2",
     "react-confirm": "^0.1.17",
     "react-dom": "^16.4.2",
